prepping for deploy

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
-    "migrate:production": "env SSL=true DATABASE_URL=db url that begins with 'postgres' npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=postgres://ilbzdmufkmwptd:a173ed4aae9cc8cc44cc64cf29a4a6b4f394d837de0e760f3eb4f43302965874@ec2-35-172-85-250.compute-1.amazonaws.com:5432/d8739lfg9rgpr0 npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
   "keywords": [],
   "engines": {
-    "node": "12.13.0"
+    "node": "10.17.0"
   },
   "author": "",
   "license": "ISC",
