--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "logger": "0.0.1",
     "morgan": "^1.9.1",
     "pg": "^7.18.1",
+    "should": "^13.2.3",
     "util": "^0.12.1",
     "winston": "^3.2.1",
     "xss": "^1.0.6"
